--- a/css/index.css
+++ b/css/index.css
@@ -350,3 +350,32 @@ img {
   background: #FFFFFF;
   color: #17A2B8;
 }
+
+.animation{
+  animation:bounce;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+}
+@keyframes bounce{
+  0%{
+    transform:translateY(0px);
+  }
+  25%{
+    transform:translateY(-70px);
+  }
+  50%{
+    transform:translateY(0px);
+  }
+  75%{
+    transform:translateY(-35px);
+  }
+  85%{
+    transform:translateY(0px);
+  }
+  92%{
+    transform:translateY(-15px);
+  }
+  100%{
+    transform:translateY(0px);
+  }
+}
