finished with project. added rest of events and at bottom of the index.js the event.stopPropagation for bubbling was set and the event.preventDefault was set for all a tags to prevent refreshing the page.

--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,9 @@ img {
   border-bottom: 2px dashed #C0C0C0;
   position: fixed;
 }
+.main-navigation{
+  z-index: 3;
+}
 .main-navigation .nav-container {
   height: 100%;
   display: flex;
